Extract MediaType attributes into Type struct.
Specified different views for responses.
